# SMASH

./: CMakeLists.txt  README.md
bundle_physics/: CMakeLists.txt
bundle_physics/include/tracking/: unique_ptr.h
bundle_physics/include/tracking/5points/: test5Points.h
bundle_physics/include/tracking/annot/: annotator.h  bundleAdjuster.h  cuboid.h  cuboidFwDecl.h  fitCuboid.h
bundle_physics/include/tracking/annot/impl/: cuboid.hpp
bundle_physics/include/tracking/phys/: bundleWithPhysics.h  bundleWithPhysicsResult.h  ceresUtil.h  consts.h  inertiaEstimation.hpp  infMass.h  parabola.h  partUtil.h  physFunctorInfo.h  physFunctorInfoFwDecl.h  physIndexer.h  physOutput.h  physProblem.h  physUtils.h  preprocessCuboids.h  trackingLogger.h  tripleColl.h  typdefsTermTypes.h  typedefs.h  typedefsGeometry.h  weights.h
bundle_physics/include/tracking/phys/energyTerms/: CoRBoundsTerm.h  compactnessTerm.h  conservationTerm.h  impulseTerm.h  parabola2dTerm.h  parabolaTerm.h  pointTerm.h  poseTerm.h  restrictCollPointTerm.h  sfmImpulseTerm.h
bundle_physics/include/tracking/phys/energyTerms/impl/: CoRBoundsTerm.hpp  batchPointTerm.hpp  compactnessTerm.hpp  conservationTerm.hpp  gravityTerm.hpp  impulseTerm.hpp  minMomentumTerm.h  parabola2dTerm.hpp  parabolaTerm.hpp  pointTerm.hpp  poseTerm.hpp  restrictCollPointTerm.hpp
bundle_physics/include/tracking/phys/initialize/: assignments.h  bgFgExtractor.h  circle.h  fitParabolas.h  initialize.h  parabola2d.h  pointTerm.h
bundle_physics/include/tracking/phys/io/: cuboidIo.h  parabolaIo.h  weightsIo.h
bundle_physics/include/tracking/phys/io/impl/: cuboidIo.hpp
bundle_physics/include/tracking/phys/vis/: vis.h  visPhys.h
bundle_physics/include/tracking/phys/vis/impl/: vis.hpp
bundle_physics/src/: main.cpp  quatTest.cpp
bundle_physics/src/5points/: test5Points.cpp
bundle_physics/src/annot/: annotator.cpp  bundleAdjuster.cpp  cuboid.cpp  fitCuboid.cpp  testQuat.cpp
bundle_physics/src/phys/: bundleWithPhysics.cpp  bundleWithPhysicsResult.cpp  infMass.cpp  physIndexer.cpp  physOutput.cpp  preprocessCuboids.cpp  tripleColl.cpp
bundle_physics/src/phys/energyTerms/: conservationTerm.cpp  corTerm.cpp  gravityTerm.cpp  impulseTerm.cpp  parabola2dTerm.cpp  parabolaTerm.cpp  pointTerm.cpp  poseTerm.cpp  sfmImpulseTerm.cpp
bundle_physics/src/phys/initialize/: assignments.cpp  bgFgExtractor.cpp  blobExtractor.cpp  fit2dParabola.cpp  initialize.cpp  optParabolas.cpp  parabola2d.cpp  pointTerm.cpp  ransacParabolas.cpp  solve.cpp
bundle_physics/src/phys/io/: cuboidIo.cpp  parabolaIo.cpp  weightsIo.cpp
bundle_physics/src/phys/vis/: vis.cpp  visPhys.cpp
common/: CMakeLists.txt
common/include/am/: stlContainers.hpp
common/include/ceres/: ceresUtil.h  functorInfo.h  jet_extras.h  myAutoDiffCostFunction.h  sample.h  typedefs.h
common/include/ceres/impl/: functorInfo.hpp
common/include/soup/: cloudTypedefs.h  geometryTypedefs.h  kdTreeUtil.h  pointCloudEigen.h
common/include/soup/impl/: kdTreeUtil.hpp  pointCloudEigen.hpp
common/include/tracking/common/: assignments.h  correspondence.h  debugEnums.h  defines.h  eigen.h  groupedTracks.h  groupedTracksFwDecl.h  macros.inl  mapper.h  optParams.h  track.h  trackFwDecl.h  trackPoint2d.h  trackPoint3d.h  trackPointFwDecl.h  tracks.h  tracksFwDecl.h  typedefs.h
common/include/tracking/common/clouds/: cloudFactory.h  kdCloud.h  kdCloudFwDecl.h  typedefsCloud.h
common/include/tracking/common/clouds/impl/: cloudFactory.hpp  kdCloud.hpp
common/include/tracking/common/impl/: assignments.hpp  groupedTracks.hpp  mapper.hpp  track.hpp  trackPoint3d.hpp  tracks.hpp
common/include/tracking/common/io/: assignmentsIo.h  broxIO.h  ceresOptionsIo.h  cloudIo.h  convert.h  depthIo.h  flowIo.h  matrixIo.h  optionsParser.h  os.h  pgm.h  rgbIo.h  savePly.h  segmentedTracksIo.h  sequentialReader.h
common/include/tracking/common/io/impl/: assignmentsIo.hpp  broxIO.hpp  matrixIo.hpp  rgbIo.hpp  savePly.hpp  segmentedTracksIo.hpp
common/include/tracking/common/maths/: geometry.h  intersections.h  quaternion.h  sphericalParametrization.h
common/include/tracking/common/maths/impl/: geometry.hpp  intersections.hpp  quaternion.hpp
common/include/tracking/common/proc/: neighbours.h  tracksByLength.h
common/include/tracking/common/proc/impl/: neighbours.hpp  tracksByLength.hpp
common/include/tracking/common/segmentation/: segmentationProblem.h
common/include/tracking/common/util/: ceresEulerYXY.h  colorGradient.h  colors.h  eigenUtil.h  energyPlotter.h  exception.h  gnuPlotter.h  orderedPair.hpp  parse.h  prettyPrint.h  util.h
common/include/tracking/common/util/impl/: ceresEulerYXY.hpp  colors.hpp  parse.hpp  util.hpp
common/include/tracking/common/util/io/: io_picojson.hpp
common/src/: assignments.cpp  correspondence.cpp  groupedTracks.cpp  mapper.cpp  pointCloudEigen.cpp  track.cpp  trackPoint3d.cpp  tracks.cpp
common/src/ceres/: functorInfo.cpp
common/src/clouds/: cloudFactory.cpp  kdCloud.cpp
common/src/io/: broxIO.cpp  cloudIo.cpp  convert.cpp  depthIo.cpp  matrixIo.cpp  optionsParser.cpp  pgm.cpp  rgbIo.cpp  savePly.cpp  segmentedTracksIo.cpp  sequentialReader.cpp
common/src/io/flowIo/: flowIO.cpp
common/src/maths/: geometry.cpp
common/src/proc/: neighbours.cpp  tracksByLength.cpp
common/src/util/: util.cpp
common/test/: test.cpp  testConvertTracksToBinary.cpp  testFlowIo.cpp  testMatrixParser.cpp  testTracks.cpp
common/test/data/: ForwardFlow000.flo  testIntr.txt
smash_blender_plugin/: __init__.py  blenderIntrinsics.py  coordinatesUtil.py  loadImages.py  pathList.py  physacqPanel.py  printState.py  randomizeParabolas.py  readScene.py  rigScene.py
vis/: CMakeLists.txt
vis/include/tracking/vis/: vis2D.h  visualizer.h
vis/include/tracking/vis/impl/: renderer.hpp  visDebug.hpp  visualizer.hpp
vis/src/: vis2D.cpp  visualizer.cpp
